[back] fix: ComparisonUpdateSerializer now supports entity contexts
